# glcube

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: auto-merge.yml
shaders/: cube.frag  cube.fsh  cube.v120.fsh  cube.v120.vsh  cube.v150.fsh  cube.v150.vsh  cube.v450.fsh  cube.v450.vsh  cube.vert  cube.vsh
src/: bench_maj2.cc  cpuident.c  gl2_cube.c  gl2_util.h  gl3_cube.c  gl4_cube.c  maj2_random.h  test_maj.c  test_maj2.c
